--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
@@ -22,10 +22,10 @@
 					<h1>Bienvenido <span th:text="${admin}"></span></h1>
 					<h2>Puede editar sus unidades,rutas y cronogramas de la app</h2>
 					<div class="d-flex justify-content-center justify-content-lg-start">
-						<a href="#about" class="btn-get-started scrollto">Get Started</a>
+						<a href="#about" class="btn-get-started scrollto">Acerca de</a>
 						<a href="https://youtu.be/D0SdaYGYa4I"
 							class="glightbox btn-watch-video"><i
-							class="bi bi-play-circle"></i><span>Watch Video</span></a>
+							class="bi bi-play-circle"></i><span>Demo Video</span></a>
 					</div>
 				</div>
 				<div class="col-lg-6 order-1 order-lg-2 hero-img" data-aos="zoom-in"
@@ -87,7 +87,7 @@
 			<div class="container" data-aos="fade-up">
 
 				<div class="section-title">
-					<h2>About Us</h2>
+					<h2>Acerca de BookMyDrive</h2>
 				</div>
 
 				<div class="row content">
