--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
@@ -96,6 +96,8 @@
 						</div>
 						<div class="is">Subtotal (sin iva): <p th:text="'$'+${costo}"></p>
 						</div>
+						<div class="is">Descuento: <p>No Aplica</p>
+						</div>
 						<div class="is">Total: <p th:text="'$'+${costo3}"></p>
 						</div>
 
