--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
@@ -44,8 +44,10 @@
 			</div>
 		</div>
 	</div>
+	 <img id="imgs" th:src="@{/images/pasajero/img9.png}" class="img-fluid rounded-start img-thumbnail" width="20%" height="20%" alt="...">
 
 	<footer th:replace="pasajero/layout :: footer"></footer>
+	<link rel="stylesheet" th:href="@{/css/pasajero/listarboleto.css}" />
 
 </body>
 </html>
