Cambios en login
Se añadió funcionalidad de recuperación de contraseña

--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
@@ -23,7 +23,7 @@
 					<h2>Puede editar sus unidades,rutas y cronogramas de la app</h2>
 					<div class="d-flex justify-content-center justify-content-lg-start">
 						<a href="#about" class="btn-get-started scrollto">Acerca de</a>
-						<a href="https://youtu.be/D0SdaYGYa4I"
+						<a href="https://www.youtube.com/watch?v=D0SdaYGYa4I"
 							class="glightbox btn-watch-video"><i
 							class="bi bi-play-circle"></i><span>Demo Video</span></a>
 					</div>
