--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
@@ -30,11 +30,12 @@
                         <input type="password" placeholder="Contraseña" name="password" id="passwordSignIn">
                     </div>
 
-                    <div class="forgot">
-                        <a>Olvidaste tu contraseña?</a>
-                    </div>
+                   
 
                     <button class="btn bkg" type="submit">Ingresar</button>
+                     <div >
+                        <a th:href="@{/forgot_password}">Olvidaste tu contraseña?</a>
+                    </div>
                 </form>
             </div>
     
