Actualización vista pasajero

--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/Administrador/style2.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/Administrador/style2.css
@@ -1869,3 +1869,17 @@ section {
     padding-top: 4px;
   }
 }
+
+
+#viaje img{
+	width: 200px;
+	height: 150px;
+}
+
+#viaje a{
+	margin-left: 30%;
+}
+
+#viaje a{
+	margin-left: 30%;
+}
