--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/pasajero/listar_asientos.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/pasajero/listar_asientos.css
@@ -16,6 +16,9 @@
             margin-right: 10px;
             border: 2px solid #9eaab8;
         }
+        .uni {
+			margin-top: 5%;
+		}
         
        .uni h1{
 		    margin-top: 10px;
