--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/accountVerified.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/accountVerified.html
@@ -41,6 +41,7 @@
         <center>
             <span th:text="${message}"></span>
         </center>
-        <span>Puedes ingresar ahora al servicio <a th:href="@{/login}">inicia sesión aqui</a></span>
-   
+        <center><span>Puedes ingresar ahora al servicio <a th:href="@{/login}">inicia sesión aqui</a></span>
+   </center>
+</body>
 </html>
