--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/layout2.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/layout2.html
@@ -3,7 +3,7 @@
 
 <head th:fragment="head">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" charset="UTF-8" />
-<title th:text="BookMyDrive"></title>
+<title th:text=" 'Reservas de boletos' +${titulo}"></title>
 
 
 <link  th:href="@{https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap}" rel="stylesheet">
