--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarBoleto.html
@@ -1,14 +1,73 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="pasajero/layout :: head">
+<head th:replace="layout/layout2 :: head">
 
 </head>
 <body>
-		<header th:replace="pasajero/layout :: header"></header>
+		<header th:replace="layout/layout2 :: header"></header>
 
+<link rel="stylesheet" th:href="@{/Administrador/style2.css}" />
+		<section id="clients" class="clients section-bg">
+			<div class="container">
 
-		
+				<div class="row" data-aos="zoom-in">
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-1.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-2.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-3.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-4.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-5.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-6.png" class="img-fluid"
+							alt="">
+					</div>
+
+				</div>
+
+			</div>
+		</section>
+		<section id="services" class="services section-bg">
+			
+			<div class="container" data-aos="fade-up">
+	
+    <div class="uni">
+		<div class="section-title">
+	
+					<h2>Boletos del usuario </h2>
+					
+				
+					<small>Estos son sus respectivos boletos comprados en la aplicación, puede visualizar el código QR respectivo a cada boleto al dar click en "Ver QR"</small>
+				</div>
+    </div>
+ 
+			</section>
 	<div class="container py-4">
 		<div class="card bg-light">
 			<div class="card-body">
@@ -44,9 +103,8 @@
 			</div>
 		</div>
 	</div>
-	 <img id="imgs" th:src="@{/images/pasajero/img9.png}" class="img-fluid rounded-start img-thumbnail" width="20%" height="20%" alt="...">
-
-	<footer th:replace="pasajero/layout :: footer"></footer>
+	
+	<footer th:replace="layout/layout2 :: footer"></footer>
 	<link rel="stylesheet" th:href="@{/css/pasajero/listarboleto.css}" />
 
 </body>
