--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarreservas.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarreservas.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="pasajero/layout :: head">
+<head th:replace="layout/layout2 :: head">
 
 </head>
 <body>
-		<header th:replace="pasajero/layout :: header"></header>
+		<header th:replace="layout/layout2 :: header"></header>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyIdb1UuI920TognTo6k9hj4DB1j7q1k5" crossorigin="anonymous">
-
+<link rel="stylesheet" th:href="@{/Administrador/style2.css}" />
 <!-- Añade jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 
@@ -15,7 +15,67 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-cMz3+XqJ02KD9ADh6+5ZP4d/bBl5LrZiHp0U9Lp43xgaoRkM1hpq2I0t0MhBEdDe" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+WyIdb1UuI920TognTo6k9hj4DB1j7q1k5" crossorigin="anonymous"></script>
 
-		
+	<link rel="stylesheet" th:href="@{/Administrador/style2.css}" />
+		<section id="clients" class="clients section-bg">
+			<div class="container">
+
+				<div class="row" data-aos="zoom-in">
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-1.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-2.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-3.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-4.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-5.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-6.png" class="img-fluid"
+							alt="">
+					</div>
+
+				</div>
+
+			</div>
+		</section>
+		<section id="services" class="services section-bg">
+			
+			<div class="container" data-aos="fade-up">
+	
+    <div class="uni">
+		<div class="section-title">
+	
+					<h2>Reservas del usuario </h2>
+					
+				
+					<small>Estos son sus respectivos reservas, puede cancelarlas si se acopla a las reglas de la aplicación</small>
+				</div>
+    </div>
+ 
+			</section>
 	<div class="container py-4">
 		<div class="card bg-light">
 			<div class="card-body">
@@ -54,10 +114,10 @@
 			</div>
 		</div>
 	</div>
-	 <img id="imgs" th:src="@{/images/pasajero/img10.png}" class="img-fluid rounded-start img-thumbnail" width="20%" height="20%" alt="...">
+	 
 
 
-	<footer th:replace="pasajero/layout :: footer"></footer>
+	<footer th:replace="layout/layout2 :: footer"></footer>
 	<link rel="stylesheet" th:href="@{/css/pasajero/listarboleto.css}" />
 
 </body>
