--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/listarseleccion.html
@@ -1,14 +1,60 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="pasajero/layout :: head">
+<head th:replace="layout/layout2 :: head">
 
 </head>
 
 <body>
 	<script src="https://www.paypal.com/sdk/js?client-id=AXfF6G_0CeXMq-WDLrXu2KxHNbxucKcNHKfY6-tAyJ1W9H0adlSONwT7MwXOLXm8bJiQQ-fcdlKkgZ_C&currency=USD"></script>
 	<link rel="stylesheet" th:href="@{/css/pasajero/listarseleccion.css}" />
-	<header th:replace="pasajero/layout :: header"></header>
+	<link rel="stylesheet" th:href="@{/Administrador/style2.css}" />
+	<header th:replace="layout/layout2 :: header"></header>
+	<section id="clients" class="clients section-bg">
+			<div class="container">
+
+				<div class="row" data-aos="zoom-in">
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-1.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-2.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-3.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-4.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-5.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-6.png" class="img-fluid"
+							alt="">
+					</div>
+
+				</div>
+
+			</div>
+		</section>
 	<div th:each="dato: ${datos}">
     <!-- Incluir un input oculto con el valor de dato[6] -->
     <input type="hidden" id="cronoValue" th:value="${dato[6]}"/>
@@ -51,9 +97,20 @@
     }
     </script>
     <input type="hidden" id="idsAsientosSeleccionados2" name="idsAsientosSeleccionados2" />
-	<div class="uni">
-		<h1>Confirmar selección:</h1>
-	</div>
+	<section id="services" class="services section-bg">
+			
+			<div class="container" data-aos="fade-up">
+	
+    <div class="uni">
+						
+	<div class="section-title">
+	
+					<h2>Confirma la selección</h2>
+					<small style="font-weight: bold;">Verifa tu información para continuar:</small>
+					
+				</div>
+    </div>
+			</section>
 	<div class="m-3"></div>
 	<div class="container py-4">
 		<div id="seleccion" class="card bg-light">
@@ -149,8 +206,8 @@
 		</div>
 	</center>
 
-
-	<footer th:replace="pasajero/layout :: footer"></footer>
+<div class="m-3"></div>
+	<footer th:replace="layout/layout2 :: footer"></footer>
 	<script th:src="@{/js/pasajero/listarseleccion.js}"></script>
 	
 </body>
