--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/perfil.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/perfil.html
@@ -1,22 +1,72 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="pasajero/layout :: head">
+<head th:replace="layout/layout2 :: head">
 
 </head>
 
 <body>
 	<link rel="stylesheet" th:href="@{/css/pasajero/confirmar.css}" />
-	<header th:replace="pasajero/layout :: header"></header>
+	<header th:replace="layout/layout2 :: header"></header>
 
+
+
+	<link rel="stylesheet" th:href="@{/Administrador/style2.css}" />
+		<section id="clients" class="clients section-bg">
+			<div class="container">
+
+				<div class="row" data-aos="zoom-in">
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-1.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-2.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-3.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-4.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-5.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-6.png" class="img-fluid"
+							alt="">
+					</div>
+
+				</div>
+
+			</div>
+		</section>
+		<section id="services" class="services section-bg">
+			
+			<div class="container" data-aos="fade-up">
 	
-
-
-<div id="indi" class="card text-center" style="max-width: 700px;">
-  <div class="card-header">
-    SOBRE MI PERFIL
-  </div>
-  <div class="card-body">
+    <div class="uni">
+		<div class="section-title">
+	
+					<h2>Mi Perfil </h2>
+					
+				<center>  <div class="card-body">
     <div class="row">
       <div class="col-md-6 order-md-2">
         <img th:src="@{/images/pasajero/img11.png}" width="200px" height="220px">
@@ -38,10 +88,18 @@
   </div>
 </div>
 
+      </center> 
+					
+				</div>
+    </div>
+ 
+			</section>
+
+
 			
 
 
-	<footer th:replace="pasajero/layout :: footer"></footer>
+	<footer th:replace="layout/layout2 :: footer"></footer>
 	
 </body>
 
