--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/vista.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/vista.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:replace="pasajero/layout :: head">
+<head th:replace="layout/layout2 :: head">
 
 </head>
     
@@ -8,14 +8,75 @@
 
 <body>
 	<script src="https://cdn.rawgit.com/davidshimjs/qrcodejs/gh-pages/qrcode.min.js"></script>
-		<header th:replace="pasajero/layout :: header"></header>
+		<header th:replace="layout/layout2 :: header"></header>
 <link rel="stylesheet" th:href="@{/css/pasajero/vista.css}" />
-		
-     <div class="contenido">
+		<link rel="stylesheet" th:href="@{/Administrador/style2.css}" />
+		<section id="clients" class="clients section-bg">
+			<div class="container">
+
+				<div class="row" data-aos="zoom-in">
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-1.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-2.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-3.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-4.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-5.png" class="img-fluid"
+							alt="">
+					</div>
+
+					<div
+						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
+						<img src="assets/img/clients/client-6.png" class="img-fluid"
+							alt="">
+					</div>
+
+				</div>
+
+			</div>
+		</section>
+			<section id="services" class="services section-bg">
+			
+			<div class="container" data-aos="fade-up">
+	
+    <div class="uni">
+		<div class="section-title">
+	
+					<h2>ASIENTO </h2>
+					
+				
 	  
-	 <h5> ASIENTO :</h5>
-	 <div id="qrcode"></div>
-	 </div>
+	
+	<center> <div id="qrcode"></div></center>
+	
+				
+				</div>
+    </div>
+ 
+			</section>
+    
+	
     <script>
         var qrcode = new QRCode(document.getElementById("qrcode"), {
             width: 400,
@@ -30,7 +91,7 @@
         qrcode.makeCode(boletoId);
     </script>
 
-	<footer th:replace="pasajero/layout :: footer"></footer>
+	<footer th:replace="layout/layout2 :: footer"></footer>
 
 </body>
 </html>
