--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/boleto.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/boleto.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<head th:fragment="head">
-<meta charset="UTF-8" />
-<title th:text=" 'Reservas de boletos' "></title>
-<link rel="stylesheet" th:href="@{/bootstrap/css/bootstrap.min.css}" />
-<link rel="stylesheet" th:href="@{/css/style.css}">
+<head th:replace="personal/layout :: head">
 
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.8.0/html2pdf.bundle.min.js"></script>
 </head>
 
 
@@ -17,38 +11,7 @@
 		 <div class="m-3"></div>
 	<header th:fragment="header">
 
-		<nav class="navbar navbar-expand-lg bg-body-tertiary"
-			data-bs-theme="dark">
-			<div class="container-fluid">
-				<a class="navbar-brand" th:href="${'/'}">Buses</a>
-				<button class="navbar-toggler" type="button"
-					data-bs-toggle="collapse" data-bs-target="#navbarNav"
-					aria-controls="navbarNav" aria-expanded="false"
-					aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarNav">
-					<ul class="navbar-nav">
-						<li class="nav-item"><a class="nav-link"
-							th:href="${'/personal/boleto'}">Boletos</a></li>
-						
-								<li class="nav-item"><a class="nav-link"
-							href="/logout">Cerrar sesión</a></li>
-						
-					</ul>
-				</div>
-			</div>
-		</nav>
-		<div class="alert alert-success" th:if="${success != null}"
-			th:text=${success}></div>
-		<div class="alert alert-danger" th:if="${error != null}"
-			th:text=${error}></div>
-		<div class="alert alert-warning" th:if="${warning != null}"
-			th:text=${warning}></div>
-		<div class="alert alert-info" th:if="${info != null}" th:text=${info}></div>
-		
-		
-	</header>
+	 <header th:replace="personal/layout :: header"></header>
 	
 	
 
@@ -91,7 +54,7 @@
 		</div>
 	</div>
 
-	<footer th:replace="layout/layout :: footer"></footer>
+	
 
 
 
@@ -120,5 +83,7 @@
             });
         });
     </script>
+        <footer th:replace="personal/layout :: footer"></footer>
+    <script th:src="@{/js/personal/home.js}"></script>
 </body>
 </html>
