--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
@@ -5,7 +5,7 @@
     <meta charset="ISO-8859-1">
     <title>Forgot Password</title>
     <!-- Link to Bootstrap CSS -->
-    <link th:href="@{/Administrador/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+<link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <style>
         body {
             display: flex;
@@ -27,7 +27,7 @@
 
         .form-container input[type="email"] {
             background-color: #fff; /* Input background color */
-            color: #fff; /* Input text color */
+            color: #495057; /* Input text color */
             border: 1px solid #495057; /* Input border color */
         }
 
