--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/message.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/message.html
@@ -3,15 +3,43 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>Insert title here</title>
+    <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <style>
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #f8f9fa; /* Color de fondo general */
+        }
+
+        .content-container {
+            text-align: center;
+            background-color: #ffffff; /* Color de fondo del contenedor */
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        }
+
+        .message-container {
+            margin-bottom: 20px;
+        }
+
+        .login-button-container {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
-    <div th:if="${message != null}">
-        <p class="text-warning">[[${message}]]</p>
+    <div class="content-container">
+        <div th:if="${message != null}" class="alert alert-warning">
+        <p th:text="${message}"></p>
     </div>
-
-    <!-- Agrega el botón de redirección al login -->
-    <a th:href="@{/login}">
-        <button type="button">Ir a Login</button>
-    </a>
+        <!-- Agrega el botón de redirección al login -->
+        <div class="login-button-container">
+            <a th:href="@{/login}" class="btn btn-primary btn-block">Ir al login</a>
+        </div>
+    </div>
 </body>
 </html>
