--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/reset_password_form.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/reset_password_form.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Reset Your Password</title>
     <!-- Add Bootstrap CSS link here -->
-    <link th:href="@{/Administrador/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+  <link th:href="@{https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css}" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     
   <style>
         body {
@@ -28,7 +28,7 @@
 
         .form-container input[type="email"] {
             background-color: #fff; /* Input background color */
-            color: #fff; /* Input text color */
+            color: #495057; /* Input text color */
             border: 1px solid #495057; /* Input border color */
         }
 
@@ -51,7 +51,7 @@
 <body>
 
 
-<div class="container">
+<div class="container d-flex justify-content-center align-items-center" style="height: 100vh;">
     <form th:action="@{/reset_password}" method="post" class="form-container">
         <div class="text-center mb-4">
             <h2>Reset Your Password</h2>
