--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/style.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/style.css
@@ -221,6 +221,15 @@ body {
     text-align: center;
 }
 
+#form_input .forgot a {
+    color: #ffffff !important; /* Agrega !important para asegurar la especificidad */
+    text-decoration: none;
+}
+
+#form_input .forgot a:hover {
+    color: #37517e !important;
+}
+
 .container .box .form.sign_up {
     /* transition: all 0.5s;
     opacity: 0;
@@ -231,14 +240,14 @@ body {
     transition: all 1.15s;
     z-index: 1;
     opacity: 0;
-    background-color: #fff;
+  background-color: #343a40; 
 }
 
 .container .box .form.sign_in {
     opacity: 1;
     transition: all 1.15s;
     z-index: 5;
-    background-color: #fff;
+  background-color: #343a40; 
 }
 
 .container.active .box .form.sign_in {
@@ -273,7 +282,7 @@ body {
     width: 50%;
     transition: all 0.8s;
     transform: translateX(0);
-    background-color: #0042A4;
+    background-color: #37517e;
     z-index: 1;
     overflow: hidden;
     z-index: 5;
@@ -334,7 +343,7 @@ body {
 }
 
 .form h3 {
-    color: #222;
+    color: #fff;
     font-size: 40px;
 }
 
@@ -369,5 +378,5 @@ body {
 }
 
 .bkg {
-    background-color: #0042A4;
+    background-color: #37517e;
 }
