--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/listarPersonal.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/listarPersonal.html
@@ -25,12 +25,12 @@
         <table class="table table-striped table-bordered" style="max-width: 800px; margin: auto;">
           <thead class="thead-inverse">
             <tr>
-              <th class="bg-dark text-white">id</th>
-              <th class="bg-dark text-white">nombre</th>
-              <th class="bg-dark text-white">apellido</th>
-              <th class="bg-dark text-white">correo</th>
-              <th class="bg-dark text-white">editar</th>
-              <th class="bg-dark text-white">eliminar</th>
+              <th class="bg-dark text-white">Id</th>
+              <th class="bg-dark text-white">Nombre</th>
+              <th class="bg-dark text-white">Apellido</th>
+              <th class="bg-dark text-white">Email</th>
+              <th class="bg-dark text-white">Editar</th>
+              <th class="bg-dark text-white">Eliminar</th>
             </tr>
           </thead>
           <tbody>
@@ -39,8 +39,8 @@
               <td th:text="${usuario.nombre}"></td>
               <td th:text="${usuario.apellido}"></td>
               <td th:text="${usuario.email}"></td>
-              <td><a class="btn btn-secondary btn-xs" th:href="@{/personal/form/}+ ${usuario.id}">editar</a></td>
-              <td><a class="btn btn-danger btn-xs" th:href="@{/personal/eliminar/}+ ${usuario.id}">eliminar</a></td>
+              <td><a class="btn btn-secondary btn-xs" th:href="@{/personal/form/}+ ${usuario.id}">Editar</a></td>
+              <td><a class="btn btn-danger btn-xs" th:href="@{/personal/eliminar/}+ ${usuario.id}">Eliminar</a></td>
             </tr>
           </tbody>
         </table>
