--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarCro.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarCro.html
@@ -29,17 +29,17 @@
         <table class="table table-striped table-bordered" style="max-width: 800px; margin: auto;">
           <thead class="thead-inverse">
             <tr>
-              <th class="bg-dark text-white">id</th>
-              <th class="bg-dark text-white">descripcion</th>
-              <th class="bg-dark text-white">fecha</th>
-              <th class="bg-dark text-white">dia</th>
-              <th class="bg-dark text-white">mes</th>
-              <th class="bg-dark text-white">año</th>
-              <th class="bg-dark text-white">hora de salida</th>
-              <th class="bg-dark text-white">unidad</th>
-              <th class="bg-dark text-white">ruta</th>
-              <th class="bg-dark text-white">editar</th>
-              <th class="bg-dark text-white">eliminar</th>
+              <th class="bg-dark text-white">Id</th>
+              <th class="bg-dark text-white">Descripcion</th>
+              <th class="bg-dark text-white">Fecha</th>
+              <th class="bg-dark text-white">Dia</th>
+              <th class="bg-dark text-white">Mes</th>
+              <th class="bg-dark text-white">Año</th>
+              <th class="bg-dark text-white">Hora de salida</th>
+              <th class="bg-dark text-white">Unidad</th>
+              <th class="bg-dark text-white">Ruta</th>
+              <th class="bg-dark text-white">Editar</th>
+              <th class="bg-dark text-white">Eliminar</th>
             </tr>
           </thead>
           <tbody>
@@ -54,8 +54,8 @@
               <td th:text="${cronograma.horaSalida}"></td>
               <td th:text="${cronograma.unidad.id}"></td>
               <td th:text="${cronograma.ruta.id}"></td>
-              <td><a class="btn btn-secondary btn-xs" th:href="@{/cronograma/form/}+ ${cronograma.id}">editar</a></td>
-              <td><a class="btn btn-danger btn-xs" th:href="@{/cronograma/eliminar/}+ ${cronograma.id}">eliminar</a></td>
+              <td><a class="btn btn-secondary btn-xs" th:href="@{/cronograma/form/}+ ${cronograma.id}">Editar</a></td>
+              <td><a class="btn btn-danger btn-xs" th:href="@{/cronograma/eliminar/}+ ${cronograma.id}">Eliminar</a></td>
             </tr>
           </tbody>
         </table>
