--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarRuta.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarRuta.html
@@ -24,12 +24,12 @@
         <table class="table table-striped table-bordered" style="max-width: 800px; margin: auto;">
           <thead class="thead-inverse">
             <tr>
-              <th class="bg-dark text-white">id</th>
-              <th class="bg-dark text-white">rutaorigen</th>
-              <th class="bg-dark text-white">rutadestino</th>
-              <th class="bg-dark text-white">costoruta</th>
-              <th class="bg-dark text-white">editar</th>
-              <th class="bg-dark text-white">eliminar</th>
+              <th class="bg-dark text-white">Id</th>
+              <th class="bg-dark text-white">Ruta de origen</th>
+              <th class="bg-dark text-white">Ruta de destino</th>
+              <th class="bg-dark text-white">Costo de la ruta</th>
+              <th class="bg-dark text-white">Editar</th>
+              <th class="bg-dark text-white">Eliminar</th>
             </tr>
           </thead>
           <tbody>
@@ -38,8 +38,8 @@
               <td th:text="${ruta.rutaOrigen}"></td>
               <td th:text="${ruta.rutaDestino}"></td>
               <td th:text="${ruta.costoRuta}"></td>
-              <td><a class="btn btn-secondary btn-xs" th:href="@{/ruta/form/}+ ${ruta.id}">editar</a></td>
-              <td><a class="btn btn-danger btn-xs" th:href="@{/ruta/eliminar/}+ ${ruta.id}">eliminar</a></td>
+              <td><a class="btn btn-secondary btn-xs" th:href="@{/ruta/form/}+ ${ruta.id}">Editar</a></td>
+              <td><a class="btn btn-danger btn-xs" th:href="@{/ruta/eliminar/}+ ${ruta.id}">Eliminar</a></td>
             </tr>
           </tbody>
         </table>
