--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarUnidad.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/listarUnidad.html
@@ -28,15 +28,15 @@
         <table class="table table-striped table-bordered" style="max-width: 800px; margin: auto;">
           <thead class="thead-inverse">
             <tr>
-              <th class="bg-dark text-white">id</th>
-              <th class="bg-dark text-white">numero</th>
-              <th class="bg-dark text-white">cooperativa</th>
+              <th class="bg-dark text-white">Id</th>
+              <th class="bg-dark text-white">Numero</th>
+              <th class="bg-dark text-white">Cooperativa</th>
               <th class="bg-dark text-white">Imagen</th>
-              <th class="bg-dark text-white">estado_actividad</th>
-              <th class="bg-dark text-white">cantidad de asientos</th>
-              <th class="bg-dark text-white">stock_boletos</th>
-              <th class="bg-dark text-white">editar</th>
-              <th class="bg-dark text-white">eliminar</th>
+              <th class="bg-dark text-white">Estado de la unidad</th>
+              <th class="bg-dark text-white">Cantidad de asientos</th>
+              <th class="bg-dark text-white">Stock de boletos</th>
+              <th class="bg-dark text-white">Editar</th>
+              <th class="bg-dark text-white">Eliminar</th>
             </tr>
           </thead>
           <tbody>
@@ -48,8 +48,8 @@
               <td th:text="${unidad.estadoActividad}"></td>
               <td th:text="${unidad.cantidadAsientos}"></td>
               <td th:text="${unidad.stockBoletos}"></td>
-              <td><a class="btn btn-secondary btn-xs" th:href="@{/unidad/form/}+ ${unidad.id}">editar</a></td>
-              <td><a class="btn btn-danger btn-xs" th:href="@{/unidad/eliminar/}+ ${unidad.id}">eliminar</a></td>
+              <td><a class="btn btn-secondary btn-xs" th:href="@{/unidad/form/}+ ${unidad.id}">Editar</a></td>
+              <td><a class="btn btn-danger btn-xs" th:href="@{/unidad/eliminar/}+ ${unidad.id}">Eliminar</a></td>
             </tr>
           </tbody>
         </table>
