--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
@@ -25,18 +25,21 @@
 
                 <form th:action="@{/login}" method="post" class="form_input">
                     <div class="type">
-                        <input type="text" placeholder="Correo electronico" name="username" id="username">
-                    </div>
+                        <input class="input-group__input" type="text" placeholder="Correo electronico" name="username" id="username">
+                    </div><br>
                     <div class="type">
-                        <input type="password" placeholder="Contraseña" name="password" id="passwordSignIn">
+                        <input class="input-group__input"  type="password" placeholder="Contraseña" name="password" id="passwordSignIn">
+                    </div> <br>
+                     <div >
+                        <a class="g" th:href="@{/forgot_password}">Olvidaste tu contraseña?</a>
                     </div>
+                    
+                     <br> 
 
                    
 
                     <button class="btn bkg" type="submit">Ingresar</button>
-                     <div >
-                        <a th:href="@{/forgot_password}">Olvidaste tu contraseña?</a>
-                    </div>
+                    
                 </form>
             </div>
     
@@ -49,17 +52,19 @@
 				</div>
                 <form th:action="@{/registro}" method="post" class="form_input">
                     <div class="type">
-                        <input type="text" placeholder="Nombre" name="nombre" id="name">
-                    </div>
+                        <input class="input-group__input" type="text" placeholder="Nombre" name="nombre" id="name">
+                    </div> <br>
                       <div class="type">
-                        <input type="text" placeholder="Apellido" name="apellido" id="apellido">
-                    </div>
+                        <input class="input-group__input" type="text" placeholder="Apellido" name="apellido" id="apellido">
+                    </div> <br>
                     <div class="type">
-                        <input type="email" placeholder="Correo Electrónico" name="email" id="email">
-                    </div>
+                        <input class="input-group__input" type="email" placeholder="Correo Electrónico" name="email" id="email">
+                        <span>No es un correo valido</span>
+                    </div> 
                     <div class="type">
-                        <input type="password" placeholder="Contraseña" name="password" id="passwordSignUp">
-                    </div>
+                        <input class="input-group__input" type="password" placeholder="Contraseña" name="password" id="passwordSignUp" pattern="[a-z0-9] {8,}">
+                        <span class="input-group__error">Ingresa digitos y letras, minimo 8 caracteres</span>
+                    </div><br><br>
 
                     <button class="btn bkg" type="submit">Confirmar</button>
                 </form>
@@ -68,7 +73,7 @@
 
         <div class="overlay">
             <div class="page page_signIn">
-                <h3>Bienvenido de vuetla!</h3>
+                <h3>Bienvenido de vuelta!</h3>
                 <p>Aun no estas registrado?</p>
 
                 <button class="btn btnSign-in">Registrate <i class="bi bi-arrow-right"></i></button>
