--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout2.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout2.html
@@ -8,6 +8,7 @@
 
 <link  th:href="@{https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap}" rel="stylesheet">
 
+<link rel="stylesheet" th:href="@{/css/pasajero/layout.css}" />
 
   <link  th:href="@{/Administrador/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
   <!-- Vendor CSS Files -->
@@ -18,7 +19,8 @@
   <link th:href="@{/Administrador/vendor/glightbox/css/glightbox.min.css}" rel="stylesheet">
   <link  th:href="@{/Administrador/vendor/remixicon/remixicon.css}" rel="stylesheet">
   <link  th:href="@{/Administrador/vendor/swiper/swiper-bundle.min.css}" rel="stylesheet">
-
+	<script src="https://cdn.botpress.cloud/webchat/v1/inject.js" ></script>
+<script src="https://mediafiles.botpress.cloud/e83b0ad7-2085-4f5a-8663-7d033543e23f/webchat/config.js" defer></script>
 </head>
 
  
