--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/style.css
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -7,7 +7,7 @@
 }
 
 body {
-    font-family: 'Mulish', sans-serif;
+     font-family: 'Roboto', sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -22,6 +22,8 @@ body {
     box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
     border-radius: 10px;
     overflow: hidden;
+    margin-top: 100px;
+    margin-bottom: 100px;
 }
 
 /* .container .box {
@@ -487,3 +489,36 @@ input-group__input {
     color: red;
     border-color: red;
     }
+    
+  .navbar {
+    background-color: #ffffff; /* Color de fondo del navbar */
+    padding: 10px; /* Espaciado interno del navbar */
+    text-align: center;
+    position: fixed; /* Fija el navbar en la parte superior */
+    top: 0;
+    height: 70px;
+    width: 100%;
+    z-index: 1000; /* Z-index alto para que esté por encima de otros elementos */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Agrega una sombra al navbar */
+    display: flex; /* Utiliza flexbox para alinear el contenido */
+    justify-content: space-between; /* Espacio uniforme entre los elementos */
+    align-items: center; /* Centra verticalmente el contenido */
+}
+
+.navbar img{
+	margin-left: 65px;
+}
+
+ 
+ footer {
+    position:fixed;
+    margin-top: 400px;
+    padding-top: 100px;
+    bottom: 0;
+    width: 100%;
+    background-color: #37517e; /* Color de fondo del footer */
+    color: #fff; /* Color del texto del footer */
+    padding: 10px; /* Espaciado interno del footer */
+    text-align: center;
+    z-index: 1000;
+}
