--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
@@ -45,13 +45,49 @@
             background-color: #0056b3; /* Hovered button color */
             border-color: #0056b3; /* Hovered button border color */
         }
+         .navbar {
+    background-color: #ffffff; /* Color de fondo del navbar */
+    padding: 10px; /* Espaciado interno del navbar */
+    text-align: center;
+    position: fixed; /* Fija el navbar en la parte superior */
+    top: 0;
+    height: 70px;
+    width: 100%;
+    z-index: 1000; /* Z-index alto para que esté por encima de otros elementos */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Agrega una sombra al navbar */
+    display: flex; /* Utiliza flexbox para alinear el contenido */
+    justify-content: space-between; /* Espacio uniforme entre los elementos */
+    align-items: center; /* Centra verticalmente el contenido */
+}
+
+.navbar img{
+	margin-left: 65px;
+}
+
+ 
+ footer {
+    position:fixed;
+    margin-top: 400px;
+    padding-top: 100px;
+    bottom: 0;
+    width: 100%;
+    background-color: #37517e; /* Color de fondo del footer */
+    color: #fff; /* Color del texto del footer */
+    padding: 10px; /* Espaciado interno del footer */
+    text-align: center;
+    z-index: 1000;
+}
     </style>
 </head>
 <body>
-
+<div class="navbar">
+	<a th:href="@{/loging}">
+         <img th:src="@{/images/logo.png}" alt="no disponible" width="150" height="auto"/>
+         </a>
+    </div>
 <div class="form-container">
     <div class="text-center mb-4">
-        <h2>Forgot Password</h2>
+        <h2>Recuperar contraseña</h2>
     </div>
 
     <div th:if="${error != null}" class="alert alert-danger">
@@ -70,7 +106,8 @@
             <input type="email" name="email" class="form-control" placeholder="Ingresa tu e-mail" required autofocus>
         </div>
         <div class="mb-3">
-            <input type="submit" value="Send" class="btn btn-primary btn-block">
+            <input type="submit" value="Enviar" class="btn btn-primary btn-block">
+            <a class="btn btn-danger" th:href="@{/loging}" role="button">Cancelar</a>
         </div>
 
     </form>
@@ -86,7 +123,13 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
         integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+Wy8RAOpQrgBnb6FU5n5T5STBhN6fHh4u"
         crossorigin="anonymous"></script>
-
+ <footer  >
+	  
+		
+			<p class="m-0 text-center text-white">Copyright &copy; Boletos
+				online</p>
+	
+		</footer>
 </body>
 </html>
 
