--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
@@ -13,10 +13,13 @@
 	<script src="https://cdn.botpress.cloud/webchat/v1/inject.js"></script>
 	<script src="https://mediafiles.botpress.cloud/8ea7035c-513b-42fc-8968-4046aca4a9eb/webchat/config.js" defer></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form</title>
+    <title>BookMyDrive</title>
 </head>
  <link rel="stylesheet" th:href="@{/css/style.css}">
 <body>
+	<div class="navbar">
+         <img th:src="@{/images/logo.png}" alt="no disponible" width="150" height="auto"/>
+    </div>
     <div class="container">
         <div class="box">
             <div class="form sign_in">
@@ -91,6 +94,13 @@
 
     <!-- link script -->
     <script th:src="@{/js/main.js}"></script>
+    <footer  >
+	  
+		
+			<p class="m-0 text-center text-white">Copyright &copy; Boletos
+				online</p>
+	
+		</footer>
 </body>
 
 <script
