--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/pagos.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/personal/pagos.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html lang="es">
-<head th:replace="personal/layout :: head">
+<head th:replace="layout/layout3 :: head">
 </head>
 <body>
     <link rel="stylesheet" th:href="@{/css/personal/home.css}" />
-    <header th:replace="personal/layout :: header"></header>
-
+    <header th:replace="layout/layout3 :: header"></header>
+<link rel="stylesheet" th:href="@{/Administrador/style3.css}" />
     <div class="container-fluid mt-4">
         <div class="row">
         
@@ -68,7 +68,7 @@
         </div>
     </div>
 
-    <footer th:replace="personal/layout :: footer"></footer>
+    <footer th:replace="layout/layout3 :: footer"></footer>
     <script th:src="@{/js/personal/home.js}"></script>
 </body>
 </html>
