--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/login.html
@@ -18,7 +18,9 @@
  <link rel="stylesheet" th:href="@{/css/style.css}">
 <body>
 	<div class="navbar">
+		<a th:href="@{/index}">
          <img th:src="@{/images/logo.png}" alt="no disponible" width="150" height="auto"/>
+         </a>
     </div>
     <div class="container">
         <div class="box">
