--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/index.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/index.html
@@ -91,7 +91,7 @@
 
 					<div
 						class="col-lg-2 col-md-4 col-6 d-flex align-items-center justify-content-center">
-						<img th:src="@images/icon6.png}" class="img-fluid"
+						<img th:src="@{images/icon6.png}" class="img-fluid"
 							alt="">
 					</div>
 
