--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/message.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/message.html
@@ -65,7 +65,7 @@
 </head>
 <body>
 	<div class="navbar">
-	<a th:href="@{/loging}">
+	<a th:href="@{/login}">
          <img th:src="@{/images/logo.png}" alt="no disponible" width="150" height="auto"/>
          </a>
     </div>
