--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/forgot_password_form.html
@@ -81,7 +81,7 @@
 </head>
 <body>
 <div class="navbar">
-	<a th:href="@{/loging}">
+	<a th:href="@{/login}">
          <img th:src="@{/images/logo.png}" alt="no disponible" width="150" height="auto"/>
          </a>
     </div>
@@ -107,7 +107,7 @@
         </div>
         <div class="mb-3">
             <input type="submit" value="Enviar" class="btn btn-primary btn-block">
-            <a class="btn btn-danger" th:href="@{/loging}" role="button">Cancelar</a>
+            <a class="btn btn-danger" th:href="@{/login}" role="button">Cancelar</a>
         </div>
 
     </form>
