--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/reset_password_form.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/reset_password_form.html
@@ -82,7 +82,7 @@
 </head>
 <body>
 <div class="navbar">
-	<a th:href="@{/loging}">
+	<a th:href="@{/login}">
          <img th:src="@{/images/logo.png}" alt="no disponible" width="150" height="auto"/>
          </a>
     </div>
