Cambios en administrador
Cambios en pagina principal de administrador

--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/administrador/home.html
@@ -158,7 +158,7 @@
 						data-aos="zoom-in" data-aos-delay="200">
 						<div class="icon-box">
 							<div class="icon">
-								<i class="bx bx-file"></i>
+								<i class='bx bxs-calendar'></i>
 							</div>
 							<h4>
 								<a th:href="${'/cronograma/listar'}">Cronogramas</a>
@@ -220,7 +220,7 @@
 						data-aos="zoom-in" data-aos-delay="100">
 						<div class="icon-box">
 							<div class="icon">
-								<i class="bx bx-bus"></i>
+								<i class='bx bx-user-voice'></i>
 							</div>
 							<h4>
 								<a th:href="@{'/personal/listar'}">Personal</a>
@@ -234,7 +234,7 @@
 						data-aos="zoom-in" data-aos-delay="200">
 						<div class="icon-box">
 							<div class="icon">
-								<i class="bx bx-file"></i>
+								<i class='bx bx-cog' ></i>
 							</div>
 							<h4>
 								<a th:href="@{'/configuracion/listar'}">Configuración</a>
