--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/confirmar_1.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/confirmar_1.html
@@ -77,7 +77,7 @@
 					<small>- Las cancelaciones de las reservaciones sin amonestaciones se aceptan en un lapso de 10 horas antes de que el viaje se realize.</small>
 				</div>
     </div>
-    <center><a class="btn btn-primary"  th:href="${'/'}" role="button">Aceptar</a></center>
+    <center><a class="btn btn-primary"  th:href="${'/app'}" role="button">Aceptar</a></center>
 			</section>
 
 	<footer th:replace="layout/layout2 :: footer"></footer>
