--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/confirmar_2.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/confirmar_2.html
@@ -76,7 +76,7 @@
 					
 				</div>
     </div>
-    <center><a class="btn btn-primary"  th:href="${'/'}" role="button">Aceptar</a></center>
+    <center><a class="btn btn-primary"  th:href="${'/app'}" role="button">Aceptar</a></center>
 			</section>
 
 			
