--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/resultados.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/pasajero/resultados.html
@@ -32,7 +32,7 @@
 								
 							</div>
 							<h4>
-								<a th:href="${'/'}">Volver a home</a>
+								<a th:href="${'/app'}">Volver a home</a>
 							</h4>
 							<p>No se encontraron viajes en esas fechas, regrese a home para indagar más servicios</p>
 						</div>
