--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout3.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout3.html
@@ -30,7 +30,7 @@
      <header id="header" th:fragment="header" class="fixed-top">
      
     <div class="container d-flex align-items-center">
-        <h1 class="logo me-auto"><a th:href="@{/}">
+        <h1 class="logo me-auto"><a th:href="@{/app}">
         
         <img src="/images/logo.png" alt="Descripción del logo" style="width: 150px; height: auto;">
         </a>
