--- a/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout4.html
+++ b/proyecto-reservas-bus/proyecto-reservas-bus/src/main/resources/templates/layout/layout4.html
@@ -28,7 +28,7 @@
      <header id="header" th:fragment="header" class="fixed-top">
      
     <div class="container d-flex align-items-center">
-        <h1 class="logo me-auto"><a th:href="@{/}">
+        <h1 class="logo me-auto"><a th:href="@{/app}">
         
         <img th:src="@{/images/logo.png}" alt="no disponible" width="150" height="auto"/>
         </a>
